--- a/src/scss/components/_mini-map.scss
+++ b/src/scss/components/_mini-map.scss
@@ -95,15 +95,18 @@ body.scrolling {
 
   transition: all 0.2s ease-in-out;
   &.opened {
+    transition: all 0.2s ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
     color: var(--color-inverse);
     height: 50px;
+    width: 120px;
+    left: 50%;
+    margin-left: -60px;
     border-radius: 25px;
-    width: 50px;
     z-index: 2000;
-    bottom: 110px;
+    bottom: 80px;
     border: solid 1px var(--color-faded-2);
     .zmdi {
       font-size: 1.4rem;
