--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -1,238 +1,238 @@
 // The component was getting to big... Needed some breathing room
 
 .n-item {
-	text-align: left;
-	display: flex;
-	align-items: center;
-	justify-content: stretch;
-	padding: 4px 16px;
-	min-height: 50px;
-	max-width: 100vw;
-	position: relative;
-	transition: all 0.2s ease-in-out;
-	text-decoration: none;
-	color: var(--color-inverse);
-	font-size: 1rem;
-	flex-shrink: 0;
-	background-color: var(--color-solid);
+  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+  padding: 4px 16px;
+  min-height: 50px;
+  max-width: 100vw;
+  position: relative;
+  transition: all 0.2s ease-in-out;
+  text-decoration: none;
+  color: var(--color-inverse);
+  font-size: 1rem;
+  flex-shrink: 0;
+  background-color: var(--color-solid);
 
-	select,
-	input {
-		margin: 8px 0;
-	}
+  select,
+  input {
+    margin: 8px 0;
+  }
 
-	&.item-divider {
-		background-color: var(--color-solid);
-	}
+  &.item-divider {
+    background-color: var(--color-bg);
+  }
 
-	&.disabled {
-		opacity: 0.5;
-	}
-	&.just-content {
-		background-color: transparent;
-		color: var(--color-inverse-2);
-		font-size: 0.8rem;
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-	&.large {
-		min-height: 56px;
-	}
+  &.disabled {
+    opacity: 0.5;
+  }
+  &.just-content {
+    background-color: transparent;
+    color: var(--color-inverse-2);
+    font-size: 0.8rem;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  &.large {
+    min-height: 56px;
+  }
 
-	&.compact {
-		min-height: 20px;
-		.n-text.md {
-			font-size: 0.8rem;
-			line-height: 1rem;
-		}
-	}
+  &.compact {
+    min-height: 20px;
+    .n-text.md {
+      font-size: 0.8rem;
+      line-height: 1rem;
+    }
+  }
 
-	&.border,
-	&[border] {
-		border: none !important;
-		box-shadow: 0px 3px 4px -2px rgba(0, 0, 0, 0.03);
-		background-color: var(--color-solid);
-		border-radius: 0.9rem;
-		overflow: hidden;
-		max-width: 95vw;
-	}
+  &.border,
+  &[border] {
+    border: none !important;
+    box-shadow: 0px 3px 4px -2px rgba(0, 0, 0, 0.03);
+    background-color: var(--color-solid);
+    border-radius: 0.9rem;
+    overflow: hidden;
+    max-width: 95vw;
+  }
 
-	&.border-bottom,
-	&[border-bottom] {
-		border-bottom: solid 1px rgba(0, 0, 0, 0.1);
-	}
+  &.border-bottom,
+  &[border-bottom] {
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+  }
 
-	.left {
-		padding-right: 16px;
-	}
-	.right {
-		padding-left: 16px;
-		text-align: right;
-		display: flex;
-		flex-wrap: nowrap;
-	}
+  .left {
+    padding-right: 16px;
+  }
+  .right {
+    padding-left: 16px;
+    text-align: right;
+    display: flex;
+    flex-wrap: nowrap;
+  }
 
-	.main {
-		flex-grow: 1;
-		flex-shrink: 1;
-	}
+  .main {
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
 
-	.left,
-	.right {
-		color: var(--color-inverse-2);
-		font-size: 0.9rem;
-		flex-shrink: 0;
-		flex-grow: 0;
-	}
+  .left,
+  .right {
+    color: var(--color-inverse-2);
+    font-size: 0.9rem;
+    flex-shrink: 0;
+    flex-grow: 0;
+  }
 
-	.right .btn-clear {
-		margin-right: -10px !important;
-	}
-	.right .zmdi .icon {
-		font-size: 24px !important;
-	}
-	.left .zmdi .icon {
-		font-size: 24px !important;
-	}
+  .right .btn-clear {
+    margin-right: -10px !important;
+  }
+  .right .zmdi .icon {
+    font-size: 24px !important;
+  }
+  .left .zmdi .icon {
+    font-size: 24px !important;
+  }
 
-	&.clickable {
-		// &:hover {
-		// 	background-color: var(--color-inverse-3);
-		// }
-	}
+  &.clickable {
+    // &:hover {
+    // 	background-color: var(--color-inverse-3);
+    // }
+  }
 
-	.main {
-		flex-grow: 1;
-		flex-shrink: 1;
-		overflow: hidden;
-		h4 {
-			font-size: 1.14rem;
-			margin: 2px 0;
-			line-height: 1.56rem;
-		}
+  .main {
+    flex-grow: 1;
+    flex-shrink: 1;
+    overflow: hidden;
+    h4 {
+      font-size: 1.14rem;
+      margin: 2px 0;
+      line-height: 1.56rem;
+    }
 
-		p {
-			margin: 2px 0;
-			color: var(--color-inverse-3);
-			line-height: 140%;
-			font-size: 0.9rem;
+    p {
+      margin: 2px 0;
+      color: var(--color-inverse-3);
+      line-height: 140%;
+      font-size: 0.9rem;
 
-			&.sm,
-			&.small {
-				font-size: 0.8rem;
-			}
-		}
-	}
+      &.sm,
+      &.small {
+        font-size: 0.8rem;
+      }
+    }
+  }
 
-	.left,
-	.right {
-		.btn-icon {
-			max-width: 26px !important;
-			width: 26px;
-			padding: 0 !important;
-			text-align: center;
-		}
-		.form-control {
-			margin: 6px 0;
-		}
-	}
-	.right {
-		.zmdi {
-			font-size: 26px;
-		}
-		.btn,
-		a,
-		span {
-			font-size: 0.9rem;
-		}
-		select {
-			min-width: 190px;
-			width: 190px;
-			text-align: right;
-		}
-		.form-control {
-			width: 190px;
-		}
-	}
-	main {
-		small {
-			font-size: 0.8rem !important;
-			line-height: 0.9rem !important;
-		}
-	}
-	&.text-primary {
-		.n-text {
-			color: var(--color-primary);
-		}
-	}
+  .left,
+  .right {
+    .btn-icon {
+      max-width: 26px !important;
+      width: 26px;
+      padding: 0 !important;
+      text-align: center;
+    }
+    .form-control {
+      margin: 6px 0;
+    }
+  }
+  .right {
+    .zmdi {
+      font-size: 26px;
+    }
+    .btn,
+    a,
+    span {
+      font-size: 0.9rem;
+    }
+    select {
+      min-width: 190px;
+      width: 190px;
+      text-align: right;
+    }
+    .form-control {
+      width: 190px;
+    }
+  }
+  main {
+    small {
+      font-size: 0.8rem !important;
+      line-height: 0.9rem !important;
+    }
+  }
+  &.text-primary {
+    .n-text {
+      color: var(--color-primary);
+    }
+  }
 } // end .n-item
 
 .n-item-divider {
-	min-height: 60px !important;
-	height: 30px;
-	align-items: flex-end !important;
-	padding-bottom: 10px !important;
-	background-color: var(--color-bg) !important;
-	&.border-bottom {
-		border-bottom-color: var(--color-faded) !important;
-	}
-	&.compact {
-		min-height: 20px !important;
-		padding-bottom: 0;
-	}
-	.main,
-	.n-text {
-		@extend .n-title;
-	}
+  min-height: 60px !important;
+  height: 30px;
+  align-items: flex-end !important;
+  padding-bottom: 10px !important;
+  background-color: var(--color-bg) !important;
+  &.border-bottom {
+    border-bottom-color: var(--color-faded) !important;
+  }
+  &.compact {
+    min-height: 20px !important;
+    padding-bottom: 0;
+  }
+  .main,
+  .n-text {
+    @extend .n-title;
+  }
 }
 
 [item-divider],
 .item-divider {
-	@extend .n-item-divider.compact;
+  @extend .n-item-divider.compact;
 }
 
 .n-list {
-	background-color: var(--color-solid);
-	margin-bottom: 16px;
+  background-color: var(--color-solid);
+  margin-bottom: 16px;
 }
 
 .border-bottom {
-	border-color: var(--color-faded-2) !important;
+  border-color: var(--color-faded-2) !important;
 }
 
 .bg-selected {
-	background-color: var(--color-background-selected) !important;
+  background-color: var(--color-background-selected) !important;
 }
 
 .bg-light {
-	background-color: var(--color-solid) !important;
+  background-color: var(--color-solid) !important;
 }
 
 .n-item-log {
-	&.compact {
-		margin: 2px !important;
-		.time-row {
-			padding: 2px;
-			display: flex;
-			align-items: center;
-			height: 24px;
-			margin-top: 3px;
-			margin-bottom: -2px;
+  &.compact {
+    margin: 2px !important;
+    .time-row {
+      padding: 2px;
+      display: flex;
+      align-items: center;
+      height: 24px;
+      margin-top: 3px;
+      margin-bottom: -2px;
 
-			.time {
-				font-size: 0.8rem;
-			}
-		}
-		.n-note-textualized {
-			font-size: 0.9rem;
-			line-height: 1.2rem;
-		}
-		.n-item {
-			min-height: 30px;
-		}
-	}
+      .time {
+        font-size: 0.8rem;
+      }
+    }
+    .n-note-textualized {
+      font-size: 0.9rem;
+      line-height: 1.1rem;
+    }
+    .n-item {
+      min-height: 30px;
+    }
+  }
 
-	.time-row {
-		padding-top: 12px;
-	}
+  .time-row {
+    padding-top: 12px;
+  }
 }
