--- a/src/scss/components/board-tabs.scss
+++ b/src/scss/components/board-tabs.scss
@@ -1,7 +1,7 @@
 .n-board-tabs {
   background-color: var(--color-solid);
   width: 100%;
-  min-height: 100%;
+  min-height: 50px;
   -webkit-overflow-scrolling: touch;
   height: 50px;
   box-shadow: inset 3px 0px 4px rgba(0, 0, 0, 0);
