--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -68,6 +68,12 @@
 
 .delete-on-app {
   transition: all 1s ease-in-out;
+  .version {
+    background-color: rgba(255, 255, 255, 0.5);
+    color: var(--color-primary);
+    font-weight: bold;
+    z-index: 3000;
+  }
 
   &.deleted {
     transition: all 0.5s ease-in-out;
@@ -131,7 +137,7 @@
 .version {
   position: absolute;
   width: 100px;
-  bottom: 100px;
+  bottom: 50px;
   font-size: 12px;
   color: rgba(255, 255, 255, 0.5);
   margin-left: -50px;
