--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -56,6 +56,7 @@
 
 .text-xs {
   font-size: 0.5rem !important;
+  line-height: 0.7rem;
 }
 .text-sm {
   font-size: 0.81rem !important;
@@ -63,6 +64,7 @@
 }
 .text-md {
   font-size: 1rem !important;
+  line-height: 1.2rem;
 }
 .text-lg {
   font-size: 1.3rem !important;
