--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -27,3 +27,11 @@ $progress-bar-color: var(--color-solid) !default;
 $progress-bar-bg: $primary !default;
 $progress-bar-animation-timing: 1s linear infinite !default;
 $progress-bar-transition: width 0.6s ease !default;
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 350px,
+  md: 600px,
+  lg: 980px,
+  xl: 1280px
+);
