--- a/src/scss/components/tracker-input-modal.scss
+++ b/src/scss/components/tracker-input-modal.scss
@@ -1,5 +1,6 @@
 .n-modal-frame.tracker-input {
   .n-modal-body {
+    border-radius: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
