--- a/public/main.css
+++ b/public/main.css
@@ -5043,6 +5043,7 @@ body {
   --color-inverse-2: #777;
   --color-inverse-3: #999;
   --color-solid: #fff;
+  --color-white: #fff;
   --color-solid-1: #eee;
   --color-solid-2: rgb(223, 223, 223);
   --color-solid-3: #666;
@@ -5068,6 +5069,9 @@ body {
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08),
     0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.24); }
 
+body.test * {
+  border: solid 1px rgba(255, 0, 0, 0.6) !important; }
+
 body {
   background-color: var(--color-bg); }
   body .main-content:before {
@@ -5078,6 +5082,15 @@ body {
     transition: all 0.2s ease-in-out;
     position: fixed;
     background-color: transparent; }
+
+.box-shadow-float {
+  box-shadow: var(--box-shadow-float); }
+
+.box-shadow-tight {
+  box-shadow: var(--box-shadow-tight); }
+
+.box-shadow {
+  box-shadow: var(--box-shadow); }
 
 body.hidden {
   background-color: var(--color-primary);
@@ -5737,6 +5750,7 @@ body.scrolling .mini-map {
   padding-top: 12px; }
 
 .n-modal-frame.tracker-input .n-modal-body {
+  border-radius: 0;
   display: flex;
   flex-direction: column;
   align-items: center; }
