--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -29,6 +29,15 @@
 .text-inverse {
   color: var(--color-inverse);
 }
+.text-inverse-1 {
+  color: var(--color-inverse-1);
+}
+.text-inverse-2 {
+  color: var(--color-inverse-2);
+}
+.text-inverse-3 {
+  color: var(--color-inverse-3);
+}
 .text-white {
   color: #fff;
 }
