--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import "./components/n-pop";
 @import "./components/list-item";
 @import "./components/tracker-input-modal";
+@import "./components/tracker-button";
 
 // TODO: Look at making prefers-color-scheme work properly - when enabled, only buttons change
 // @media (prefers-color-scheme: dark) {
