--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -35,6 +35,9 @@
 .text-inverse-2 {
   color: var(--color-inverse-2);
 }
+.text-dark {
+  color: var(--color-dark);
+}
 .text-inverse-3 {
   color: var(--color-inverse-3);
 }
