--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "./base/text";
 @import "./base/forms";
 @import "./base/flex";
+@import "./base/animate";
 
 // Components
 @import "./components/board-tabs";
