--- a/public/main.css
+++ b/public/main.css
@@ -5064,8 +5064,8 @@ body {
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba(32, 105, 157, 0.1);
   --color-translucent: rgba(255, 255, 255, 0.89);
-  --box-shadow-tight: 0px 2px 5px -1px rgba(0, 0, 0, 0.2);
-  --box-shadow: 0px 10px 20px -5px rgba(0, 0, 0, 0.2);
+  --box-shadow-tight: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08),
     0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.24); }
 
@@ -5145,10 +5145,12 @@ body.theme-dark {
   --color-faded-3: rgba(255, 255, 255, 0.4);
   --color-full-screen: rgba(0, 0, 0, 0.4);
   --color-background-selected: rgba($primaryBright, 0.82);
-  --box-shadow: 0px 0px 40px -5px rgba(255, 255, 255, 0.2);
-  --box-shadow-tight: 0px 0px 8px -1px rgba(255, 255, 255, 0.4);
-  --box-shadow-float: 0 4px 8px rgba(255, 255, 255, 0.08),
-    0 2px 4px rgba(255, 255, 255, 0.08), 0 0 2px rgba(255, 255, 255, 0.24);
+  --box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.06),
+    0px 8px 10px rgba(0, 0, 0, 0.3);
+  --box-shadow-tight: 0px 2px 2px rgba(255, 255, 255, 0.06),
+    0px 4px 6px -1px rgba(0, 0, 0, 0.4);
+  --box-shadow-float: 0px 2px 2px rgba(255, 255, 255, 0.06),
+    0px 6px 10px -1px rgba(0, 0, 0, 0.4);
   --color-translucent: rgba(0, 0, 0, 0.79); }
   body.theme-dark .n-item.border-bottom {
     border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important; }
@@ -5240,6 +5242,9 @@ body.theme-dark {
 
 .text-inverse-2 {
   color: var(--color-inverse-2); }
+
+.text-dark {
+  color: var(--color-dark); }
 
 .text-inverse-3 {
   color: var(--color-inverse-3); }
@@ -5349,9 +5354,12 @@ textarea.form-control {
 
 select {
   -webkit-appearance: none;
-  background-color: var(--color-solid-1) !important;
+  background-color: transparent !important;
   color: var(--color-inverse) !important;
-  border: solid 1px var(--color-solid) !important; }
+  border: transparent !important;
+  border-radius: 0 !important;
+  border-bottom: solid 1px var(--color-inverse-3) !important;
+  position: relative; }
 
 .input-group {
   border: none;
@@ -5400,6 +5408,24 @@ select {
 
 .flex-shrink-off {
   flex-shrink: 0; }
+
+.animate {
+  transition: all 0.2s ease-in-out; }
+  .animate.hidden {
+    transition: all 0.2s ease-in-out;
+    pointer-events: none; }
+  .animate.visible {
+    transition: all 0.2s ease-in-out;
+    opacity: 1; }
+  .animate.notice-text.hidden {
+    color: var(--color-primary-bright) !important;
+    transform: scale(1.1); }
+  .animate.up.hidden {
+    opacity: 0;
+    transform: translateY(200px); }
+  .animate.down.hidden {
+    opacity: 0;
+    transform: translateY(-200px); }
 
 .n-board-tabs {
   background-color: var(--color-solid);
