--- a/public/main.css
+++ b/public/main.css
@@ -4871,6 +4871,7 @@ button:focus {
     opacity: 0.7; }
 
 .btn-content {
+  max-width: 300px;
   flex-direction: column;
   align-items: center;
   position: relative;
