--- a/src/scss/components/_tracker-button.scss
+++ b/src/scss/components/_tracker-button.scss
@@ -114,6 +114,7 @@ body.scrolling .n-tracker-button {
     text-align: center;
     line-height: 100%;
     font-size: 0.8rem;
+    z-index: 2;
   }
   .countdown {
     position: absolute;
