--- a/public/board-tabs.css
+++ b/public/board-tabs.css
@@ -1,5 +1,5 @@
 .n-board-tabs {
-  background-color: var(--color-solid);
+  background-color: var(--header-background);
   width: 100%;
   min-height: 50px;
   -webkit-overflow-scrolling: touch;
