--- a/public/main.css
+++ b/public/main.css
@@ -4831,8 +4831,8 @@ button:focus {
 .btn:focus, .btn.focus {
   box-shadow: inherit; }
 
-.btn:active {
-  background-color: var(--color-faded-1); }
+.btn-group .btn:active {
+  color: var(--color-primary) !important; }
 
 .btn {
   transition: all 0.2s ease-in-out;
@@ -4844,7 +4844,7 @@ button:focus {
     border-radius: 1rem; }
   .btn:active {
     transition: all 0.2s ease-in-out;
-    transform: scale(0.9); }
+    transform: scale(0.9) !important; }
 
 .btn-primary {
   background-color: var(--color-primary-bright); }
@@ -4961,7 +4961,7 @@ button:focus {
 .btn-group {
   background-color: var(--color-solid-2);
   padding: 2px;
-  border-radius: 12px; }
+  border-radius: 1.2rem; }
   .btn-group .btn {
     background: transparent !important;
     border: none;
@@ -4974,7 +4974,8 @@ button:focus {
     .btn-group .btn.active {
       background-color: var(--color-solid) !important;
       border-radius: 10px !important;
-      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14); }
+      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14);
+      border-radius: 1.2rem !important; }
     .btn-group .btn i.zmdi {
       font-size: 1.4rem; }
 
@@ -5045,6 +5046,7 @@ body.no-scroll {
 body {
   --color-darkest: #fff;
   --color-bg: #f9f9f9;
+  --tracker-background: #fff;
   --color-inverse: #333;
   --color-inverse-1: #555;
   --color-inverse-2: #777;
@@ -5055,6 +5057,7 @@ body {
   --color-solid-2: rgb(223, 223, 223);
   --color-solid-3: #666;
   --color-primary: #20699d;
+  --tabs-background: var(--color-primary);
   --color-primary-muted: #4d84a1;
   --color-primary-dark: #1a212a;
   --color-primary-faded: rgba(50, 159, 215, 0.45);
@@ -5074,7 +5077,8 @@ body {
   --box-shadow-tight: 0px 3px 5px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08),
-    0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.24); }
+    0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.24);
+  --header-background: #fff; }
 
 body.test * {
   border: solid 1px rgba(255, 0, 0, 0.6) !important; }
@@ -5134,9 +5138,12 @@ body.offline .main-content:before {
   z-index: 2000; }
 
 body.theme-dark {
+  --header-background: #000;
+  --tabs-background: #000;
+  --tracker-background: rgb(5, 5, 5);
   --color-darkest: #000;
-  --color-bg: #1d1d1d;
-  --color-solid: #000;
+  --color-bg: #1e2125;
+  --color-solid: #111;
   --color-solid-1: #222;
   --color-solid-2: #333;
   --color-solid-3: #444;
@@ -5435,7 +5442,7 @@ select {
     transform: translateY(-200px); }
 
 .n-board-tabs {
-  background-color: var(--color-solid);
+  background-color: var(--header-background);
   width: 100%;
   min-height: 50px;
   -webkit-overflow-scrolling: touch;
@@ -5478,7 +5485,7 @@ select {
       transition: all 0.2s ease-in-out; }
 
 .full-screen {
-  background-color: var(--color-faded-3);
+  background-color: var(--color-full-screen);
   z-index: 2000;
   position: fixed;
   top: 0;
@@ -5759,7 +5766,6 @@ body.scrolling .mini-map {
     padding-bottom: 0; }
 
 .n-list {
-  background-color: var(--color-solid);
   margin-bottom: 16px; }
 
 .border-bottom {
@@ -5841,7 +5847,7 @@ body.scrolling .n-tracker-button {
   align-items: center;
   justify-content: center;
   border: solid 1px rgba(0, 0, 0, 0.1);
-  background-color: var(--color-solid);
+  background-color: var(--tracker-background);
   color: var(--color-inverse);
   box-shadow: var(--box-shadow);
   border-radius: 1rem;
@@ -5927,7 +5933,8 @@ body.scrolling .n-tracker-button {
     right: 4px;
     text-align: center;
     line-height: 100%;
-    font-size: 0.8rem; }
+    font-size: 0.8rem;
+    z-index: 2; }
   .n-tracker-button .countdown {
     position: absolute;
     top: 0;
