--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -25,6 +25,8 @@ body.no-scroll {
 body {
   --color-darkest: #fff;
   --color-bg: #f9f9f9;
+
+  --tracker-background: #fff;
   --color-inverse: #333;
   --color-inverse-1: #555;
   --color-inverse-2: #777;
@@ -35,6 +37,7 @@ body {
   --color-solid-2: rgb(223, 223, 223);
   --color-solid-3: #666;
   --color-primary: #20699d;
+  --tabs-background: var(--color-primary);
   --color-primary-muted: #4d84a1;
   --color-primary-dark: #1a212a;
   --color-primary-faded: rgba(50, 159, 215, 0.45);
@@ -56,6 +59,8 @@ body {
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08),
     0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.24);
+
+  --header-background: #fff;
 }
 
 body.test {
@@ -65,9 +70,12 @@ body.test {
 }
 
 @mixin darkmode {
+  --header-background: #000;
+  --tabs-background: #000;
+  --tracker-background: rgb(5, 5, 5);
   --color-darkest: #000;
-  --color-bg: #1d1d1d;
-  --color-solid: #000;
+  --color-bg: #1e2125;
+  --color-solid: #111;
   --color-solid-1: #222;
   --color-solid-2: #333;
   --color-solid-3: #444;
