--- a/src/scss/components/_full-screen.scss
+++ b/src/scss/components/_full-screen.scss
@@ -1,18 +1,18 @@
 .full-screen {
-	background-color: var(--color-faded-3);
-	z-index: 2000;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transition: all 0.2s ease-in-out;
-	&.hidden {
-		opacity: 0;
-		transform: scale(1.3);
-		pointer-events: none;
-	}
+  background-color: var(--color-full-screen);
+  z-index: 2000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+  &.hidden {
+    opacity: 0;
+    transform: scale(1.3);
+    pointer-events: none;
+  }
 }
