--- a/src/scss/components/_tracker-button.scss
+++ b/src/scss/components/_tracker-button.scss
@@ -8,7 +8,7 @@ body.scrolling .n-tracker-button {
   align-items: center;
   justify-content: center;
   border: solid 1px rgba(0, 0, 0, 0.1);
-  background-color: var(--color-solid);
+  background-color: var(--tracker-background);
   color: var(--color-inverse);
   box-shadow: var(--box-shadow);
   border-radius: 1rem;
