--- a/public/main.css
+++ b/public/main.css
@@ -5859,6 +5859,8 @@ body.scrolling .n-tracker-button {
     transition: all 0.2s ease-in-out;
     transform: scale(0.95);
     box-shadow: var(--box-shadow-tight); }
+  .n-tracker-button.added {
+    border: solid 1px rgba(56, 168, 63, 0.3); }
   .n-tracker-button .emoji {
     position: absolute;
     top: 0;
@@ -6161,13 +6163,31 @@ button {
     transform: rotate(-1.7deg);
     animation-timing-function: ease-in-out; } }
 
+@keyframes shadow-pulse {
+  0% {
+    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2); }
+  100% {
+    box-shadow: 0 0 0 35px rgba(0, 0, 0, 0); } }
+
 .wiggle {
   animation: keyframes2 infinite 0.6s ease-out;
   transform-origin: 50% 10%; }
 
 .wiggle-other {
-  animation: keyframes1 infinite 0.6s ease-in;
-  transform-origin: 30% 5%; }
+  animation: keyframes2 infinite 0.6s ease-in;
+  transform-origin: 50% 10%; }
+
+.pulse {
+  transform: scale(1);
+  animation: pulse 2s infinite; }
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(56, 168, 63, 0.3); }
+  70% {
+    box-shadow: 0 0 0 10px rgba(56, 168, 63, 0); }
+  100% {
+    box-shadow: 0 0 0 0 rgba(56, 168, 63, 0); } }
 
 .badge {
   height: 22px;
