--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -404,3 +404,8 @@ button {
   background-color: var(--color-green);
   color: #fff;
 }
+
+.badge-light {
+  background-color: var(--color-solid-2);
+  color: var(--color-inverse-2);
+}
