--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,7 @@
 @import "./components/list-item";
 @import "./components/tracker-input-modal";
 @import "./components/tracker-button";
+@import "./components/share-image";
 
 // TODO: Look at making prefers-color-scheme work properly - when enabled, only buttons change
 // @media (prefers-color-scheme: dark) {
