--- a/public/main.css
+++ b/public/main.css
@@ -4899,7 +4899,7 @@ button:focus {
     align-items: center;
     justify-content: center;
     color: #fff;
-    content: "✓";
+    content: "";
     top: -12px;
     left: -12px;
     width: 24px;
@@ -4908,6 +4908,7 @@ button:focus {
     border-radius: 12px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); }
   .btn-content.active {
+    content: "✓";
     border: none;
     background-color: var(--color-primary); }
     .btn-content.active .n-text {
@@ -5967,6 +5968,165 @@ body.scrolling .n-tracker-button {
     left: 12%;
     right: 12%;
     z-index: 2; }
+
+.share-image-component {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2012;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 16px; }
+  .share-image-component .share-image-wrapper {
+    border-radius: 5px;
+    position: relative;
+    background-color: var(--color-solid);
+    width: 95vw;
+    max-width: 400px;
+    min-width: 300px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column; }
+  .share-image-component .date {
+    padding: 16px;
+    line-height: 100%;
+    font-weight: 500;
+    color: var(--color-solid-3); }
+    .share-image-component .date .day-date {
+      font-weight: 700;
+      font-size: 0.9rem; }
+    .share-image-component .date .day-time {
+      font-weight: 500;
+      font-size: 0.7rem;
+      opacity: 0.6; }
+  .share-image-component .note {
+    display: flex;
+    font-weight: bolder;
+    line-height: 110%;
+    flex-grow: 1;
+    padding: 0px 16px;
+    align-items: center; }
+    .share-image-component .note .n-note-textualized {
+      flex-grow: 1;
+      text-align: center; }
+    .share-image-component .note .tracker {
+      color: var(--color-primary); }
+  .share-image-component .actions {
+    max-width: 400px;
+    min-width: 300px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    z-index: 10; }
+    .share-image-component .actions .btn {
+      width: 60px !important;
+      height: 60px !important;
+      margin: 0 10px;
+      flex-grow: 0;
+      flex-shrink: 0;
+      border-radius: 30px;
+      font-size: 24px;
+      border: solid 1px #fff;
+      background-color: transparent;
+      color: #fff; }
+  .share-image-component .trackers {
+    overflow: scroll;
+    display: flex;
+    max-width: 100%;
+    padding: 16px 16px 6px; }
+    .share-image-component .trackers .emoji-value {
+      flex-shrink: 0;
+      flex-grow: 0;
+      display: flex;
+      flex-direction: column;
+      height: 65px;
+      position: relative;
+      width: 65px;
+      align-items: center;
+      justify-content: center; }
+      .share-image-component .trackers .emoji-value .label {
+        font-size: 0.7rem;
+        line-height: 100%;
+        width: 65px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-align: center; }
+      .share-image-component .trackers .emoji-value .emoji {
+        font-size: 2rem;
+        line-height: 100%; }
+      .share-image-component .trackers .emoji-value .value {
+        display: block;
+        white-space: nowrap;
+        position: absolute;
+        top: 0%;
+        margin-left: 1.1rem;
+        font-size: 0.6rem;
+        font-weight: 500;
+        padding: 2px 5px;
+        border-radius: 10px;
+        background-color: rgba(255, 255, 255, 0.8);
+        border: solid 1px rgba(0, 0, 0, 0.1); }
+  .share-image-component .nomie-logo {
+    position: absolute;
+    top: 16px;
+    right: 16px; }
+  .share-image-component.theme-green {
+    --color-solid: var(--color-green); }
+    .share-image-component.theme-green .note {
+      color: #fff;
+      text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3); }
+      .share-image-component.theme-green .note .tracker {
+        color: #126818; }
+    .share-image-component.theme-green .date {
+      color: #000; }
+    .share-image-component.theme-green .nomie-logo path {
+      fill: #126818; }
+  .share-image-component.theme-pink {
+    --color-solid: pink; }
+    .share-image-component.theme-pink .note {
+      color: #fff;
+      text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3); }
+      .share-image-component.theme-pink .note .tracker {
+        color: #ff5a77; }
+    .share-image-component.theme-pink .date {
+      color: #000; }
+    .share-image-component.theme-pink .nomie-logo path {
+      fill: #ff5a77; }
+  .share-image-component.theme-blue {
+    --color-solid: var(--color-primary-bright); }
+    .share-image-component.theme-blue .note {
+      color: #fff;
+      text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3); }
+      .share-image-component.theme-blue .note .tracker {
+        color: rgba(255, 255, 255, 0.89); }
+    .share-image-component.theme-blue .date {
+      color: #000; }
+    .share-image-component.theme-blue .nomie-logo path {
+      fill: #fff; }
+  .share-image-component.theme-dark {
+    --color-solid: #000; }
+    .share-image-component.theme-dark .note {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+      color: #fff;
+      text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3); }
+      .share-image-component.theme-dark .note .tracker {
+        color: rgba(255, 255, 255, 0.89); }
+    .share-image-component.theme-dark .label,
+    .share-image-component.theme-dark .date {
+      color: #fff;
+      opacity: 0.6; }
+    .share-image-component.theme-dark .nomie-logo path {
+      fill: var(--color-primary-bright); }
 
 .input-model {
   flex-grow: 1;
