--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -61,6 +61,7 @@ body {
     0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.24);
 
   --header-background: #fff;
+  --modal-border: solid 1px rgba(255, 255, 255, 0.12);
 }
 
 body.test {
@@ -89,7 +90,7 @@ body.test {
   --color-faded-1: rgba(255, 255, 255, 0.1);
   --color-faded-2: rgba(255, 255, 255, 0.2);
   --color-faded-3: rgba(255, 255, 255, 0.4);
-  --color-full-screen: rgba(0, 0, 0, 0.4);
+  --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba($primaryBright, 0.82);
   --box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.06),
     0px 8px 10px rgba(0, 0, 0, 0.3);
@@ -97,6 +98,8 @@ body.test {
     0px 4px 6px -1px rgba(0, 0, 0, 0.4);
   --box-shadow-float: 0px 2px 2px rgba(255, 255, 255, 0.06),
     0px 6px 10px -1px rgba(0, 0, 0, 0.4);
+
+  --modal-border: solid 1px rgba(255, 255, 255, 0.12);
 
   --color-translucent: rgba(0, 0, 0, 0.79);
 
