--- a/src/scss/components/_mini-map.scss
+++ b/src/scss/components/_mini-map.scss
@@ -13,7 +13,7 @@ body.scrolling {
   left: 16px;
   display: flex;
   margin: 0 !important;
-  border: none !important;
+  border: solid 1px var(--color-faded-2) !important;
   border-radius: 22px !important;
   box-shadow: var(--box-shadow-float) !important;
   height: $size;
