--- a/src/scss/components/_tracker-button.scss
+++ b/src/scss/components/_tracker-button.scss
@@ -46,7 +46,7 @@ body.scrolling .n-tracker-button {
 
   &.saving {
     transition: all 0.2s ease-in-out;
-    border: solid 2px var(--color-primary-bright);
+    border: solid 2px rgba($green, 0.5);
   }
 
   @include media-breakpoint-up(md) {
