--- a/public/main.css
+++ b/public/main.css
@@ -4871,32 +4871,42 @@ button:focus {
     opacity: 0.7; }
 
 .btn-content {
-  max-width: 300px;
+  width: 300px;
   flex-direction: column;
   align-items: center;
   position: relative;
   padding: 12px 12px 16px;
   margin: 10px;
+  line-height: 112%;
   border: var(--modal-border);
   box-shadow: var(--box-shadow-float);
   color: var(--color-primary);
   transition: all 0.2s ease-in-out; }
+  @media (min-width: 600px) {
+    .btn-content {
+      max-width: 450px;
+      width: 450px; } }
+  @media (max-width: 349.98px) {
+    .btn-content {
+      max-width: 280px;
+      width: 280px; } }
   .btn-content:hover {
     color: var(--color-primary);
     transform: scale(1.06); }
-  .btn-content .n-text.lg {
+  .btn-content .text-md {
     font-weight: bold;
-    font-size: 1rem !important;
     margin-bottom: 6px; }
-  .btn-content .n-text.sm {
+  .btn-content .text-sm {
     font-size: 0.72rem !important;
     line-height: 1rem !important;
     font-weight: 400;
+    color: var(--color-faded-3);
     opacity: 0.7; }
   .btn-content.active {
     content: "✓";
     border: none;
-    background-color: var(--color-primary); }
+    background-color: var(--color-primary);
+    color: #fff !important; }
     .btn-content.active .n-text {
       color: #fff !important; }
     .btn-content.active:after {
@@ -5646,9 +5656,7 @@ body.scrolling .mini-map {
 .n-pop {
   border: none !important;
   box-shadow: 0px 3px 4px -2px rgba(0, 0, 0, 0.03);
-  background-color: var(--color-solid);
-  border-radius: 0.9rem;
-  overflow: hidden; }
+  background-color: var(--color-solid); }
 
 @media (max-width: 599.98px) {
   .n-list .n-pop {
